Solved null exception iterator at savedVds; updated deprecated getinstance()